--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^17.0.41",
     "@types/react-dom": "^17.0.14",
     "axios": "^0.26.1",
+    "feather-icons": "^4.28.0",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
     "react": "^17.0.2",
